[project]
name = "1337x"
version = "2.1.0"
description = "Unofficial API of 1337x.to"
authors = [{ name = "Hemanta Pokharel", email = "yo@hemantapkh.com" }]
requires-python = "~=3.8"
readme = "README.md"
license = "MIT"
keywords = [
    "1337x",
    "torrents",
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
]
dependencies = [
    "requests>=2.32.3,<3",
    "beautifulsoup4>=4.12.3,<5",
    "cloudscraper>=1.2.71,<2",
    "asyncer==0.0.8",
]

[project.urls]
Repository = "https://github.com/hemantapkh/1337x"
Documentation = "https://github.com/hemantapkh/1337x/blob/main/README.md"
"Issue tracker" = "https://github.com/hemantapkh/1337x/issues"

[tool.hatch.build.targets.sdist]
include = ["py1337x"]

[tool.hatch.build.targets.wheel]
include = ["py1337x"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
